--- a/Containers/BurgerOrderer/Dockerfile
+++ b/Containers/BurgerOrderer/Dockerfile
@@ -33,6 +33,7 @@ COPY package*.json ./
 USER root
 RUN npm ci
 
+COPY . .
 # Expose the port that the application listens on.
 EXPOSE 8080
 USER node
