--- a/Containers/kitchenview/Dockerfile
+++ b/Containers/kitchenview/Dockerfile
@@ -1,14 +1,37 @@
-# Use a lightweight version of Nginx to serve the HTML file
-FROM nginx:alpine
+# syntax=docker/dockerfile:1
 
-# Set production environment
-ENV NODE_ENV=production
+# Comments are provided throughout this file to help you get started.
+# If you need more help, visit the Dockerfile reference guide at
+# https://docs.docker.com/go/dockerfile-reference/
 
-# Copy your custom nginx config file (if created)
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+# Want to help us make this template better? Share your feedback here: https://forms.gle/ybq9Krt8jtBL3iCk7
 
-# Copy the HTML file to Nginx's default directory
-COPY kitchen_view.html /usr/share/nginx/html/index.html
+ARG NODE_VERSION=22.8.0
 
-# Expose port 80 for Nginx
-EXPOSE 8080
+FROM node:${NODE_VERSION}-alpine
+
+# Use production node environment by default.
+ENV NODE_ENV production
+
+
+WORKDIR /usr/src/app
+
+# Download dependencies as a separate step to take advantage of Docker's caching.
+# Leverage a cache mount to /root/.npm to speed up subsequent builds.
+# Leverage a bind mounts to package.json and package-lock.json to avoid having to copy them into
+# into this layer.
+
+# Run the application as a non-root user.
+USER node
+
+COPY package*.json ./
+
+USER root
+
+COPY . .
+# Expose the port that the application listens on.
+EXPOSE 5000
+USER node
+
+# Run the application.
+CMD node server.js
