--- a/Containers/kitchenview/Dockerfile
+++ b/Containers/kitchenview/Dockerfile
@@ -1,37 +1,23 @@
 # syntax=docker/dockerfile:1
 
-# Comments are provided throughout this file to help you get started.
-# If you need more help, visit the Dockerfile reference guide at
-# https://docs.docker.com/go/dockerfile-reference/
-
-# Want to help us make this template better? Share your feedback here: https://forms.gle/ybq9Krt8jtBL3iCk7
-
 ARG NODE_VERSION=22.8.0
-
 FROM node:${NODE_VERSION}-alpine
 
-# Use production node environment by default.
-ENV NODE_ENV production
-
+ENV NODE_ENV=production
 
 WORKDIR /usr/src/app
 
-# Download dependencies as a separate step to take advantage of Docker's caching.
-# Leverage a cache mount to /root/.npm to speed up subsequent builds.
-# Leverage a bind mounts to package.json and package-lock.json to avoid having to copy them into
-# into this layer.
-
-# Run the application as a non-root user.
-USER node
-
+# Copy the package.json and package-lock.json files
 COPY package*.json ./
 
-USER root
+# Install dependencies
+RUN npm install --omit=dev
 
+# Copy the rest of the app into the container
 COPY . .
-# Expose the port that the application listens on.
-EXPOSE 5000
-USER node
 
-# Run the application.
-CMD node server.js
+# Expose the port
+EXPOSE 5000
+
+# Start the application
+CMD ["node", "kitchenview.js"]
