--- a/Containers/Backend/MenuStore/compose.yaml
+++ b/Containers/Backend/MenuStore/compose.yaml
@@ -20,11 +20,14 @@ services:
       MYSQL_ROOT_PASSWORD: burger
       MYSQL_DATABASE: db
     volumes:
-      - ./db.sql:/docker-entrypoiont-initdb.d/init.sql
-      #- ./:/vol
-    build:
-      context: .
-      dockerfile: docker_db
+      #- db:/var/lib/mysql
+      #- ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
+      #- burger-db:/var/lib/mysql
+      #- ./db.sql:/docker-entrypoiont-initdb.d/init.sql
+      - ./:/vol
+    #build:
+    #  context: .
+    #  dockerfile: docker_db
 
   phpmyadmin:
     image: phpmyadmin
@@ -33,7 +36,10 @@ services:
       - 8080:80
     environment:
       ports: 8080:80
-
+#volumes:
+  #burger-db
+#  db:
+#    driver: local
   #app:
   #  build:
   #    context: .
