--- a/Containers/kitchenview/package.json
+++ b/Containers/kitchenview/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.0"
+    "axios": "^1.7.7",
+    "express": "^4.21.1"
   }
 }
