--- a/Containers/Backend/MenuStore/compose.yaml
+++ b/Containers/Backend/MenuStore/compose.yaml
@@ -14,7 +14,7 @@
 services:
   db:
     image: mysql:5.7
-    #platform: linux/x86_64
+    platform: linux/x86_64
     restart: always
     environment:
       MYSQL_DATABASE: 'db'
