--- a/Containers/BurgerOrderer/Dockerfile
+++ b/Containers/BurgerOrderer/Dockerfile
@@ -1,42 +1,30 @@
 # syntax=docker/dockerfile:1
 
-# Comments are provided throughout this file to help you get started.
-# If you need more help, visit the Dockerfile reference guide at
-# https://docs.docker.com/go/dockerfile-reference/
-
-# Want to help us make this template better? Share your feedback here: https://forms.gle/ybq9Krt8jtBL3iCk7
-
+# Use an official Node.js image
 ARG NODE_VERSION=22.8.0
-
 FROM node:${NODE_VERSION}-alpine
 
-# Use production node environment by default.
-ENV NODE_ENV production
-
-
+# Set the working directory inside the container
 WORKDIR /usr/src/app
 
-# Download dependencies as a separate step to take advantage of Docker's caching.
-# Leverage a cache mount to /root/.npm to speed up subsequent builds.
-# Leverage a bind mounts to package.json and package-lock.json to avoid having to copy them into
-# into this layer.
-RUN --mount=type=bind,source=package.json,target=package.json \
-    --mount=type=bind,source=package-lock.json,target=package-lock.json \
-    --mount=type=cache,target=/root/.npm \
-    npm ci --omit=dev
-
-# Run the application as a non-root user.
-USER node
-
+# Copy package.json and package-lock.json to the working directory
 COPY package*.json ./
 
-USER root
-RUN npm ci
+# Install the dependencies (using npm ci)
+RUN npm ci --omit=dev
 
+# Copy the rest of the application code to the working directory
 COPY . .
-# Expose the port that the application listens on.
-EXPOSE 8080
+
+# Expose the port that server.js will listen on (port 3000)
+EXPOSE 3000
+
+# Temporarily switch to root to install curl
+USER root
+RUN apk add --no-cache curl
+
+# Switch back to the node user to run the application
 USER node
 
-# Run the application.
-CMD node server.js
+# Run the application
+CMD ["node", "server.js"]
