--- a/Containers/kitchenview/package.json
+++ b/Containers/kitchenview/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.7",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "cors": "^2.8.5"
   }
 }
